Fix for vertex AI client